# Datos-II-Proyecto-1

./: Branch.txt  CMakeLists.txt  DumpFIleFormatIdea.txt  README.md  linkedLst.cpp  test  test.cpp
MPointers/: client  client.cpp
MPointers/Classes/: MPointers.cpp  client  client.cpp  client.h  mptr.cpp
Memory Manager/Classes/: Bloque.h  Manager.h  dump.cpp  server  server.cpp
Memory Manager/Classes/Dump Folder/: 20250401_181418_410.dump  20250402_101228_389.dump
lib/: LinkedList.h  MPointers.h  client  client.cpp
mgr/: Bloque.h  Manager.h  server  server.cpp
proto/: hello.proto  system.proto
src/: mem-mgr.cc  mptr.cc  server.cc
